# ThinWin

./: CMakeLists.txt  ThinWin.cpp  ThinWin.sln  ThinWin.vcxproj  ThinWin.vcxproj.filters  stdafx.h
Inc/: ThinWin.h
Lib/: CMakeLists.txt  ThinWin.cpp  ThinWin.vcxproj  ThinWin.vcxproj.filters  pch.h  stdafx.h
ThinWinSample/: Resource.h  ThinWinSample.cpp  ThinWinSample.rc  ThinWinSample.vcxproj  ThinWinSample.vcxproj.filters  pch.h  stdafx.cpp  stdafx.h
